classDiagram
    class GerenciadorDispositivos {
        + __init__(fps_alvo, duracao_estrobe, pre_atraso)
        + conectar_arduino()
        + encontrar_dispositivo(vendor_id, product_id)
        + iniciar_camera()
        + ler_frame()
        + enviar_comando_arduino(comando)
        + liberar()
    }

    class DetectorFaixa {
        + __init__()
        + processar_frame_e_detectar_pupila(frame)
        + __analisar_faixa(frame)
        + __analisar_pupila(frame)
        + __calcular_integral_horizontal(frame)
    }

    class ControladorSincronizacao {
        - gerenciador_dispositivos
        - detector_faixa
        - estado
        - pular_sincronizacao_grossa
        - periodo_mestre_inicial_us
        + __init__(gerenciador, detector, pular_sincronizacao_grossa, periodo_mestre_inicial_us)
        + executar()
        - __sincronizacao_grossa()
        - __sincronizacao_fina()
        - __loop_principal()
        - __processar_frame_e_atualizar_tempos(frame)
    }

    ControladorSincronizacao o-- GerenciadorDispositivos : usa
    ControladorSincronizacao o-- DetectorFaixa : usa